fix sortable header contrast

--- a/styles/components/_c-data-table.scss
+++ b/styles/components/_c-data-table.scss
@@ -191,7 +191,7 @@
   position: relative;
   text-decoration: underline;
   text-decoration-color: var(--au-gray-300);
-  color: var(--au-gray-600);
+  color: var(--au-gray-700);
   transition: color var(--au-transition);
 
   &:hover {
